Fixed overflow width

--- a/styles.css
+++ b/styles.css
@@ -63,11 +63,6 @@ button {
   border-radius: 5px;
 }
 
-html, body {
-  max-width: 100%;
-  overflow-x: hidden;
-}
-
 body {
   animation: transitionIn 0.75s;
   background-color: var(--silverPink);
